update commons-lang to commons-lang3, pull thd auth from JenkinsHttpClient class, update test